Many properties of Ocean Modifier are animatable when they should not (e.g. Wind Velocity). #78343

Closed
opened 2020-06-27 09:01:10 +02:00 by Kenji Jones · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.77

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7

Short description of error
When adding keyframes to the "Wind Velocity" parameter within the Ocean Modifier, it does not update the value when played. Clicking on the box for Wind Velocity will update the value to the correct number, but then it will stay stuck on that number and the model will also stay stuck to that value until clicked on again. I also tried saving the animation to see if it might be a viewport issue, but it rendered with the same issue.

Exact steps for others to reproduce the error
Add a plane> add ocean modifier to the plane
Frame 1 Ocean Modifier keyframes: Time = 1.00 Wind Velocity = 1m/s
Frame 250 Ocean Modifier keyframes: Time = 10.00 Wind Velocity = 30m/s
Play the animation from frame 1 and the plane will move based on the wind velocity that appeared that last time you clicked the parameter.
Ex: If the last time you clicked on the Wind Velocity parameter was to enter 30m/s, then when you play the animation it will move using the value of 30m/s even though the box may have reset to 1m/s at the beginning of the animation.

{F8646558, size=full}
Ocean Wind Velocity Problem.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.77 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` **Short description of error** When adding keyframes to the "Wind Velocity" parameter within the Ocean Modifier, it does not update the value when played. Clicking on the box for Wind Velocity will update the value to the correct number, but then it will stay stuck on that number and the model will also stay stuck to that value until clicked on again. I also tried saving the animation to see if it might be a viewport issue, but it rendered with the same issue. **Exact steps for others to reproduce the error** Add a plane> add ocean modifier to the plane Frame 1 Ocean Modifier keyframes: Time = 1.00 Wind Velocity = 1m/s Frame 250 Ocean Modifier keyframes: Time = 10.00 Wind Velocity = 30m/s Play the animation from frame 1 and the plane will move based on the wind velocity that appeared that last time you clicked the parameter. Ex: If the last time you clicked on the Wind Velocity parameter was to enter 30m/s, then when you play the animation it will move using the value of 30m/s even though the box may have reset to 1m/s at the beginning of the animation. {[F8646558](https://archive.blender.org/developer/F8646558/OceanModifier_Wind_Velocity.png), size=full} [Ocean Wind Velocity Problem.blend](https://archive.blender.org/developer/F8646551/Ocean_Wind_Velocity_Problem.blend)
Author

Added subscriber: @Gnarboss

Added subscriber: @Gnarboss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Bastien Montagne self-assigned this 2020-09-25 09:45:29 +02:00

Thanks for the report, but there is no bug here, we do not want to update the whole UI at every frame for performances reasons, and that would be the only way to ensure all animated properties are updated real time in UI during animation playback. Just hovering the settings with the mouse is enough to update them though.

Thanks for the report, but there is no bug here, we do not want to update the whole UI at every frame for performances reasons, and that would be the only way to ensure all animated properties are updated real time in UI during animation playback. Just hovering the settings with the mouse is enough to update them though.
Author

I just checked again and I don't believe the problem is invalid and it still exists even in Blender 2.9.
The problem about the UI is not the main problem I want to address.

The main problem is that using keyframes with the wind velocity variable does not change the animation as it plays or when it is rendered.
Ex: If I click on frame 1 and click on the wind velocity box it should have a value of 1m/s. When I hit play, the wave animation itself (not just the number in the UI) does not change from the setting of 1m/s.

It will loop continuously at the wind velocity of 1m/s as if there was no keyframe other keyframe to transition to.

If I go to frame 250 and click on the wind velocity box which should have a value of 30m/s and the hit play again. The entire animation will loop with the wind velocity setting of 30m/s.

I just checked again and I don't believe the problem is invalid and it still exists even in Blender 2.9. The problem about the UI is not the main problem I want to address. The main problem is that using keyframes with the wind velocity variable does not change the animation as it plays or when it is rendered. Ex: If I click on frame 1 and click on the wind velocity box it should have a value of 1m/s. When I hit play, the wave animation itself (not just the number in the UI) does not change from the setting of 1m/s. It will loop continuously at the wind velocity of 1m/s as if there was no keyframe other keyframe to transition to. If I go to frame 250 and click on the wind velocity box which should have a value of 30m/s and the hit play again. The entire animation will loop with the wind velocity setting of 30m/s.

Ah OK, in fact I think there are many properties in this modifier that should not be animatable, since they are only used once when initializing the simulation. Will fix that.

Ah OK, in fact I think there are many properties in this modifier that should not be animatable, since they are only used once when initializing the simulation. Will fix that.
Bastien Montagne changed title from Ocean Modifier > Wind Velocity does not update with keyframes when played. to Many properties of Ocean Modifier are animatable when they should not (e.g. Wind Velocity). 2020-09-25 17:17:39 +02:00

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

This issue was referenced by c6a9b62bb0

This issue was referenced by c6a9b62bb0b139ffe0c06d34150dfbc5de0c4cab

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

So just to clarify. keyframing the wind velocity is not currently possible with the Ocean modifier?

I was trying to animate a time lapse of the waves changing direction and speed over time. I figured out a work around by using many ocean modifiers and fading them in and out, but it seemed like all that would be unnecessary if I could just keyframe more properties within one instance of the ocean modifier.

If not many people are doing stuff like this I suppose it's a non issue, but I just wanted to share my opinion.

Anyway, thank you for taking a look!

So just to clarify. keyframing the wind velocity is not currently possible with the Ocean modifier? I was trying to animate a time lapse of the waves changing direction and speed over time. I figured out a work around by using many ocean modifiers and fading them in and out, but it seemed like all that would be unnecessary if I could just keyframe more properties within one instance of the ocean modifier. If not many people are doing stuff like this I suppose it's a non issue, but I just wanted to share my opinion. Anyway, thank you for taking a look!

Correct, most of the Ocean modifier's parameters are actually not animatable, since they are set only once in the solver at the init step of the simulation.

Correct, most of the Ocean modifier's parameters are actually not animatable, since they are set only once in the solver at the init step of the simulation.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78343
No description provided.