Fix T78343: Most properties of Ocean modifier should not be animatable.

Properties that are only used when initializing the simulation cannot be
animated (the changes in their value would not be taken into account).